--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
   <header>
     <h1><img src="images/dinos-r-us.svg" alt="Dinos ’R’ Us"></h1>
+    <nav>
+      <ol>
+        <li><a href="#hadrosaur">Hadrosaur</a></li>
+        <li><a href="#iguanodon">iguanodon</a></li>
+        <li><a href="#stegosaurus">stegosaurus</a></li>
+      </ol>
+    </nav>
   </header>
 
   <main>
